:bug: Fix controls wrap

--- a/scss/components/forms/buttons.scss
+++ b/scss/components/forms/buttons.scss
@@ -30,7 +30,7 @@
 
     height: 2rem;
 
-    margin: 0 .5rem;
+    margin: .25rem .5rem;
     padding: 0 1rem;
 
     border-width: 0;
