--- a/scss/components/forms/control.scss
+++ b/scss/components/forms/control.scss
@@ -4,6 +4,7 @@
     position: relative;
 
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
 
     margin: .5rem;
